tests/init_state/projection/downcast_write_on_uninit_enum.err.expected
error: at 6:13: [VF-DowncastVariantNotRefined] In function 'f', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
   |
 6 |             o as Some = 7;
   |             ^^^^^^^^^^^^^
error: at 6:13: [INIT-WriteThroughUninitEnumProjection] In function 'f', block 'entry': cannot write through variant projection: 'o' is not initialized here
   |
 6 |             o as Some = 7;
   |             ^^^^^^^^^^^^^
